<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"
        android:textSize="40sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|top">

        <ImageView
            android:id="@+id/body"
            android:layout_width="@dimen/width_image"
            android:layout_height="@dimen/height_image"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/body"
            android:src="@drawable/body"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/shoes"
            android:layout_width="@dimen/width_image"
            android:layout_height="@dimen/height_image"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/shoes"
            android:src="@drawable/shoes"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/hat"
            android:layout_width="@dimen/width_image"
            android:layout_height="@dimen/height_image"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/hat"
            android:src="@drawable/hat"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/glasses"
            android:layout_width="@dimen/width_image"
            android:layout_height="@dimen/height_image"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/glasses"
            android:src="@drawable/glasses"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/eyebrows"
            android:layout_width="@dimen/width_image"
            android:layout_height="@dimen/height_image"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/eyebrows"
            android:src="@drawable/eyebrows"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/eyes"
            android:layout_width="@dimen/width_image"
            android:layout_height="@dimen/height_image"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/eyes"
            android:src="@drawable/eyes"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/mouth"
            android:layout_width="@dimen/width_image"
            android:layout_height="@dimen/height_image"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/mouth"
            android:src="@drawable/mouth"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ears"
            android:layout_width="@dimen/width_image"
            android:layout_height="@dimen/height_image"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/ears"
            android:src="@drawable/ears"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/moustache"
            android:layout_width="@dimen/width_image"
            android:layout_height="@dimen/height_image"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/moustache"
            android:src="@drawable/mustache"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/nose"
            android:layout_width="@dimen/width_image"
            android:layout_height="@dimen/height_image"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/nose"
            android:src="@drawable/nose"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/arms"
            android:layout_width="@dimen/width_image"
            android:layout_height="@dimen/height_image"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/arms"
            android:src="@drawable/arms"
            android:visibility="invisible" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_horizontal"
        android:text="Click his parts to add/remove them!" />


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RatingBar
            android:id="@+id/rb_arms"
            android:layout_width="@dimen/width_rb"
            android:layout_height="@dimen/height_rb"
            android:layout_column="0"
            android:layout_row="32"
            android:numStars="1"
            android:scaleX=".5"
            android:scaleY=".5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="6dp"
            android:layout_row="32"
            android:text="@string/arms"
            android:textColor="@color/colorBlack" />

        <RatingBar
            android:id="@+id/rb_moustache"
            android:layout_width="@dimen/width_rb"
            android:layout_height="@dimen/height_rb"
            android:layout_column="0"
            android:layout_row="31"
            android:numStars="1"
            android:scaleX=".5"
            android:scaleY=".5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="6dp"
            android:layout_row="31"
            android:text="@string/moustache"
            android:textColor="@color/colorBlack" />

        <RatingBar
            android:id="@+id/rb_nose"
            android:layout_width="@dimen/width_rb"
            android:layout_height="@dimen/height_rb"
            android:layout_column="0"
            android:layout_row="30"
            android:numStars="1"
            android:scaleX=".5"
            android:scaleY=".5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="6dp"
            android:layout_row="30"
            android:text="@string/nose"
            android:textColor="@color/colorBlack" />

        <RatingBar
            android:id="@+id/rb_eyebrows"
            android:layout_width="@dimen/width_rb"
            android:layout_height="@dimen/height_rb"
            android:layout_column="0"
            android:layout_row="29"
            android:numStars="1"
            android:scaleX=".5"
            android:scaleY=".5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="6dp"
            android:layout_row="29"
            android:text="@string/eyebrows"
            android:textColor="@color/colorBlack" />

        <RatingBar
            android:id="@+id/rb_hat"
            android:layout_width="@dimen/width_rb"
            android:layout_height="@dimen/height_rb"
            android:layout_column="0"
            android:layout_row="28"
            android:numStars="1"
            android:scaleX=".5"
            android:scaleY=".5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="6dp"
            android:layout_row="28"
            android:text="@string/hat"
            android:textColor="@color/colorBlack" />

        <CheckBox
            android:id="@+id/checkbox_eyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginTop="6dp"
            android:layout_row="32"
            android:text="@string/eyes" />

        <CheckBox
            android:id="@+id/checkbox_glasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginTop="6dp"
            android:layout_row="31"
            android:text="@string/glasses" />

        <CheckBox
            android:id="@+id/checkbox_mouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginTop="6dp"
            android:layout_row="30"
            android:text="@string/mouth" />

        <CheckBox
            android:id="@+id/checkbox_ears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginTop="6dp"
            android:layout_row="29"
            android:text="@string/ears" />

        <CheckBox
            android:id="@+id/checkbox_shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginTop="6dp"
            android:layout_row="28"
            android:text="@string/shoes" />

        <CheckBox
            android:id="@+id/checkbox_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:layout_row="0"
            android:text="@string/body" />
    </GridLayout>
</LinearLayout>
</ScrollView>